[gd_scene load_steps=7 format=3 uid="uid://h15omfbp4itu"]

[ext_resource type="Script" path="res://locations/minigames/nodes/liar/liar.gd" id="1_h8pm3"]
[ext_resource type="PackedScene" uid="uid://bvhg7a5q5tmws" path="res://locations/minigames/nodes/liar/nodes/timer.tscn" id="4_lk7y7"]
[ext_resource type="PackedScene" uid="uid://bhi2gelqnmo12" path="res://locations/minigames/nodes/liar/nodes/player.tscn" id="6_3f0sk"]
[ext_resource type="PackedScene" uid="uid://dtqvovtctndtl" path="res://ui/camera/camera.tscn" id="6_v1bv8"]
[ext_resource type="PackedScene" uid="uid://d24f6jscr5rhj" path="res://locations/minigames/nodes/liar/nodes/stack.tscn" id="7_bjnwe"]
[ext_resource type="Theme" uid="uid://fk4bfu837bvc" path="res://materials/ui/theme.tres" id="9_whx6x"]

[node name="Liar" type="Node2D"]
script = ExtResource("1_h8pm3")

[node name="Camera2D" parent="." instance=ExtResource("6_v1bv8")]
zoom = Vector2(0.8, 0.8)
default_zoom_desktop_override = false
default_zoom = Vector2(0.8, 0.8)
max_zoom = 500.0

[node name="Stack" parent="." instance=ExtResource("7_bjnwe")]

[node name="Timer" parent="." instance=ExtResource("4_lk7y7")]

[node name="Player0" parent="." instance=ExtResource("6_3f0sk")]
position = Vector2(1, 633)
player_name = "tas"
color = Color(0.768627, 0.419608, 0.419608, 1)

[node name="Player1" parent="." instance=ExtResource("6_3f0sk")]
position = Vector2(-310, 0)
rotation = 1.5708
id = 1
player_name = "foxy"
hide_cards = true
color = Color(0.866667, 0.74902, 0.360784, 1)

[node name="Player2" parent="." instance=ExtResource("6_3f0sk")]
position = Vector2(-4, -623)
rotation = 3.14159
id = 2
hide_cards = true
color = Color(0.733333, 0.431373, 0.854902, 1)

[node name="Player3" parent="." instance=ExtResource("6_3f0sk")]
position = Vector2(327, 5)
rotation = -1.5708
id = 3
player_name = "soriel"
hide_cards = true
color = Color(0.419608, 0.768627, 0.701961, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Margin" type="MarginContainer" parent="UI"]
z_index = 2
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -61.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Margin"]
layout_mode = 2
theme = ExtResource("9_whx6x")
alignment = 1

[node name="PlayButton" type="Button" parent="UI/Margin/HBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SpinBox" type="SpinBox" parent="UI/Margin/HBoxContainer"]
layout_mode = 2
max_value = 9.0

[node name="LiarButton" type="Button" parent="UI/Margin/HBoxContainer"]
layout_mode = 2
text = "Liar!"

[node name="Background" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1920.0
